tests/snapshots/snapshot_tests__anonymous_enum_field_table_ir.snap
---
source: tests/snapshot_tests.rs
expression: ir_context
---
SchemaContext {
    files: [
        FileDef {
            path: "anonymous_enum_field_table.poly",
            namespaces: [
                NamespaceDef {
                    name: "",
                    datasource: None,
                    items: [
                        Struct(
                            StructDef {
                                name: "OrderItem",
                                fqn: "OrderItem",
                                is_embed: false,
                                datasource: None,
                                cache_strategy: None,
                                load: None,
                                is_readonly: false,
                                soft_delete_field: None,
                                pack_separator: None,
                                header: [],
                                items: [
                                    Field(
                                        FieldDef {
                                            name: "item_id",
                                            field_type: TypeRef {
                                                original: "u32",
                                                fqn: "u32",
                                                namespace_fqn: "",
                                                type_name: "u32",
                                                parent_type_path: "",
                                                lang_type: "u32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "quantity",
                                            field_type: TypeRef {
                                                original: "u32",
                                                fqn: "u32",
                                                namespace_fqn: "",
                                                type_name: "u32",
                                                parent_type_path: "",
                                                lang_type: "u32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "unit",
                                            field_type: TypeRef {
                                                original: "UnitEnum",
                                                fqn: "OrderItem.UnitEnum",
                                                namespace_fqn: "OrderItem",
                                                type_name: "UnitEnum",
                                                parent_type_path: "",
                                                lang_type: "UnitEnum",
                                                is_primitive: false,
                                                is_struct: false,
                                                is_enum: true,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    InlineEnum(
                                        EnumDef {
                                            name: "UnitEnum",
                                            fqn: "OrderItem.UnitEnum",
                                            items: [
                                                Member(
                                                    EnumMember {
                                                        name: "Pieces",
                                                        value: Some(
                                                            0,
                                                        ),
                                                    },
                                                ),
                                                Member(
                                                    EnumMember {
                                                        name: "Kilograms",
                                                        value: Some(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                                Member(
                                                    EnumMember {
                                                        name: "Liters",
                                                        value: Some(
                                                            2,
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                ],
                                indexes: [],
                                refs: [],
                                relations: [],
                            },
                        ),
                    ],
                },
            ],
            renames: [],
        },
    ],
}
